--- a/public/style.css
+++ b/public/style.css
@@ -58,7 +58,7 @@ body{
   button{
     color: white;
     border: 0;
-    background: #ff0aa7;
+    background: #ff4f0a;
     padding: 6px;
     min-width: 80px;
     border-radius: 4px;
